--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,164 @@
 	<link rel="stylesheet" href="bower\normalize-css\normalize.css">
 </head>
 <body>
-	
+
+	<div id="wrapper">
+		<div id="header">
+						<div class="container clearfix">
+						<div class="logo">
+						<a href="#"><img src="img/logo.png" height="28" width="79" alt="golden_logo"></a>
+						</div>
+								<ul class="nav">
+								<li><a href="#">Home</a></li>
+								<li><a href="#">Services</a></li>
+								<li><a href="#">Portfolio</a></li>
+								<li><a href="#">About</a></li>
+								<li><a href="#">Contact</a></li>
+								</ul>
+						</div>
+					</div>
+				<div id="home">
+				<div class="container">
+					<h3>Welcome To Our Studio!</h3>
+					<h1>It’s nice to Meet you</h1>
+					<button class="btn">Tell Me More</button>
+				</div>
+				</div>
+			<div id="services" class="box">
+						<div class="container">
+							<h2 class="title">Services</h2>
+							<p class="descr">Proin iaculis purus consequat sem cure.</p>
+									<div class="services-wrap clearfix">
+											<div class="services-item commerce">
+													<h5 class="title">E-Commerce</h5>
+															<p>Proin iaculis purus consequat sem cure 
+															digni ssim. Donec porttitora entum suscipit</p>
+											</div>
+											<div class="services-item responsive">
+													<h5 class="title">Responsive Web</h5>
+															<p>Proin iaculis purus consequat sem cure 
+															digni ssim. Donec porttitora entum suscipit</p>
+											</div>
+											<div class="services-item security">
+													<h5 class="title">Web Security</h5>
+															<p>Proin iaculis purus consequat sem cure 
+															digni ssim. Donec porttitora entum suscipit</p>
+											</div>
+									</div>
+						</div>
+			</div>
+			<div id="portfolio" class="box">
+						<div class="container">
+							<h2 class="title">Our portfolio</h2>
+							<p class="descr">Proin iaculis purus consequat sem cure.</p>
+									<div class="portfolio-wrap clearfix">
+											<div class="portfolio-item">
+													<a href="#"><img src="img/p-item1.png" height="301" width="291" alt=""></a>
+													<div class="p-item-footer">
+													<h5 class="title">Ebony & Ivory</h5>
+													<span>Branding</span>
+													</div>	
+									</div>
+									<div class="portfolio-item">
+													<a href="#"><img src="img/p-item2.png" height="301" width="291" alt=""></a>
+													<div class="p-item-footer">
+													<h5 class="title">Ebony & Ivory</h5>
+													<span>Branding</span>
+													</div>	
+									</div>
+									<div class="portfolio-item">
+													<a href="#"><img src="img/p-item3.png" height="301" width="291" alt=""></a>
+													<div class="p-item-footer">
+													<h5 class="title">Ebony & Ivory</h5>
+													<span>Branding</span>
+													</div>	
+									</div>
+									<div class="portfolio-item">
+													<a href="#"><img src="img/p-item4.png" height="301" width="291" alt=""></a>
+													<div class="p-item-footer">
+													<h5 class="title">Ebony & Ivory</h5>
+													<span>Branding</span>
+													</div>	
+									</div>
+									<div class="portfolio-item">
+													<a href="#"><img src="img/p-item5.png" height="301" width="291" alt=""></a>
+													<div class="p-item-footer">
+													<h5 class="title">Ebony & Ivory</h5>
+													<span>Branding</span>
+													</div>	
+									</div>
+									<div class="portfolio-item">
+													<a href="#"><img src="img/p-item6.png" height="301" width="291" alt=""></a>
+													<div class="p-item-footer">
+													<h5 class="title">Ebony & Ivory</h5>
+													<span>Branding</span>
+													</div>	
+									</div>
+						</div>
+			</div>
+		</div>
+			<div id="about" name="about" class="box">
+					<div class="container">
+						<h2 class="title">About Us</h2>
+						<p class="descr">Proin iaculis purus consequat sem cure.</p>
+						<div class="about-wrap">
+								<div class="about-item clearfix">
+										<div class="about-text left text-right">
+												<h5 class="title"><span>July 2010</span><br> Our Humble Beginnings</h5>
+												<p>Proin iaculis purus consequat sem cure 
+													 digni ssim. Donec porttitora entum suscipit 
+													 aenean rhoncus posuere odio in tincidunt. Proin 
+													 iaculis purus consequat sem cure digni 
+													 ssim. Donec porttitora entum suscipit.</p>
+										</div>
+										<div class="about-img left">
+												<img src="img/about1.png" alt"">
+										</div>
+								</div>
+								<div class="about-item clearfix">
+										<div class="about-text right text-left">
+												<h5 class="title"><span>January 2011</span><br>Facing Startup Battles</h5>
+												<p>Proin iaculis purus consequat sem cure 
+													 digni ssim. Donec porttitora entum suscipit 
+													 aenean rhoncus posuere odio in tincidunt. Proin 
+													 iaculis purus consequat sem cure digni 
+													 ssim. Donec porttitora entum suscipit.</p>
+										</div>
+										<div class="about-img right">
+												<img src="img/about2.png" alt"">
+										</div>
+								</div>
+								<div class="about-item clearfix">
+										<div class="about-text left text-right">
+												<h5 class="title"><span>December 2012</span><br>Enter The Dark Days</h5>
+												<p>Proin iaculis purus consequat sem cure 
+													 digni ssim. Donec porttitora entum suscipit 
+													 aenean rhoncus posuere odio in tincidunt. Proin 
+													 iaculis purus consequat sem cure digni 
+													 ssim. Donec porttitora entum suscipit.</p>
+										</div>
+										<div class="about-img left">
+												<img src="img/about3.png" alt"">
+										</div>
+								</div>
+								<div class="about-item clearfix">
+										<div class="about-text right text-left">
+												<h5 class="title"><span>february 2015</span><br>Our Triumph</h5>
+												<p>Proin iaculis purus consequat sem cure 
+													 digni ssim. Donec porttitora entum suscipit 
+													 aenean rhoncus posuere odio in tincidunt. Proin 
+													 iaculis purus consequat sem cure digni 
+													 ssim. Donec porttitora entum suscipit.</p>
+										</div>
+										<div class="about-img right">
+												<img src="img/about4.png" alt"">
+										</div>
+								</div>
+								<a class="about-link" href="#">Our<br>Story<br>Continues<br>...</a>
+						</div>
+					</div>
+			</div>
+	</div>
+
 </body>
 </html>
